<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additing_fragment_name"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="right"
        android:textColor="@color/color5"
        android:textSize="25dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/earned"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxBackgroundColor="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
        app:endIconDrawable="@drawable/ic_baseline_clear_24"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/color4"
        app:hintTextColor="@color/color4"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_earned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/spent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxBackgroundColor="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_money_off_24"
        app:endIconDrawable="@drawable/ic_baseline_clear_24"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/color4"
        app:hintTextColor="@color/color4"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_spent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/spent_comment"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxBackgroundColor="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_text_snippet_24"
        app:endIconDrawable="@drawable/ic_baseline_clear_24"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/color4"
        app:hintTextColor="@color/color4"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_spent_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Добавить"
            app:icon="@drawable/ic_baseline_add_24"
            android:backgroundTint="@color/color4"
            />

    </LinearLayout>

</LinearLayout>