<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistic"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="right"
        android:textColor="@color/color5"
        android:textSize="25dp"
        />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/month"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:layout_marginLeft="20dp"
             android:layout_weight="1"
             android:textStyle="bold"
             />

         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
             android:id="@+id/text_input_layout"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginRight="20dp"
             app:boxStrokeColor="@color/color4"
             android:hint="Период"
             app:boxBackgroundColor="@color/white"
             app:boxCornerRadiusTopStart="20dp"
             app:boxCornerRadiusTopEnd="20dp"
             >


             <AutoCompleteTextView
                 android:id="@+id/month_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:enabled="true"
                 android:inputType="none"

                 />

         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>

    <TextView
        android:id="@+id/text_earted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earned"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        />
    <RelativeLayout
        android:id="@+id/relative_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        >
    <TextView
        android:id="@+id/text_output_earned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60dp"
        android:text="120000"
        android:textColor="@color/color4"
        android:textStyle="bold"
        android:layout_toLeftOf="@+id/ruble_earned"
        android:layout_centerInParent="true"
        />

        <ImageView
            android:id="@+id/ruble_earned"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ruble"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"


            />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_spent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spent"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        >
        <TextView
            android:id="@+id/text_output_spent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60dp"
            android:text="55000"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/ruble_spent"
            android:layout_centerInParent="true"
            />

        <ImageView
            android:id="@+id/ruble_spent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ruble"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            />

    </RelativeLayout>



</LinearLayout>